# Rust_Text_Editor

./: Cargo.toml
src/: main.rs  text_buffer.rs
ui/: main.slint
