[package]
name = "rustedit"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.8", package = "gtk4" }
glib = { version = "0.19", features = ["v2_78"] }
gio = "0.19"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
unicode-segmentation = "1.10"
xi-unicode = "0.3"
pangocairo = "0.19.2"
pango = "0.19"
